@@ -11,3 +11,13 @@ To interact with the software you use the `ardj' binary, which simply imports
 the `ardj.cli' module and calls the run() method.  Look there to understand how
 things work.
 """
+
+import sys
+
+
+def is_verbose():
+    return "-v" in sys.argv
+
+
+def is_dry_run():
+    return "-n" in sys.argv
