@@ -241,13 +241,19 @@ def cmd_xmpp_send(*args):
     commit()
 
 
-def cmd_download_artist(*args):
+def cmd_download_artist_schedule(*args):
     """queues retrieving more tracks by the specified artists"""
     from ardj.database import DownloadRequest, commit
     for arg in args[1:]:
         if DownloadRequest.find_by_artist(arg) is None:
             DownloadRequest(artist=arg, owner="console").put()
     commit()
+
+
+def cmd_download_artist(*args):
+    """downloads songs by an artist (immediately)"""
+    from ardj.tracks import find_new_tracks
+    find_new_tracks(args)
 
 
 def cmd_db_stats(*args):
@@ -414,6 +420,10 @@ def run(args):
         lst = " ".join(arguments)
         print "#compdef ardj\n# generated by ardj --zsh\n_arguments \"1:Select command:((%s))\"" % lst
         exit(0)
+
+    # Strip global modifiers.
+    while len(args) > 1 and args[1].startswith("-"):
+        del args[1]
 
     if len(args) >= 2:
         handler = find_handler(args[1])
