@@ -4,6 +4,7 @@
  - Fixed Unicode problems in ardj console (CLI).
  - Fixed the voters command in fresh install (Jabber).
  - Fixed a bug in the MySQL database driver.
+ - Fixed missing tags when downloading from Jamendo.
  - Added history for twitter-fetcher (contrib).
  - Added an option to disable voting (config).
  - Added automatic promotion of most active voters to admins.
